style add for: catalog, navigation, logo, name_shop

--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
 	<meta charset="utf-8">
 	<title>Музторг</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico" rel="stylesheet">
 </head>
 <body>
 	<header>
-		<div id="logo"></div>
-		<div id="shop_name">МУЗТОРГ</div>
+		<div ><a href="index.html" id="logo"></a></div>
+		<div id="shop_name" style="font-family: 'Lobster', cursive;">МУЗТОРГ</div>
 		<div id="navigation">
 			<a href="#">Главная</a>
 			<a href="#">Корзина</a>
 			<a href="#">Наши магазины</a>
 		</div>
 	</header>
-	<nav id="catalog"></nav>
+	<nav id="catalog">
+	    <ul id="catalog_list">
+	        <li class="catalog_item"><a href="#" id="cat_guitar"></a></li>
+	        <li class="catalog_item"><a href="#" id="cat_piano"></a></li>
+	        <li class="catalog_item"><a href="#"></a></li>
+	        <li class="catalog_item"><a href="#"></a></li>
+	        <li class="catalog_item"><a href="#"></a></li>
+	    </ul>
+	</nav>
 	<main>
 		<div class="shop_item">
 			<h1>Гитара</h1>
