--- a/tamplates/guitars.html
+++ b/tamplates/guitars.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Музторг</title>
 	<link rel="stylesheet" type="text/css" href="../styles/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Lobster|Merriweather+Sans|Pacifico" rel="stylesheet">
 </head>
 <body>
 	<header>
