--- a/tamplates/micros.html
+++ b/tamplates/micros.html
@@ -4,12 +4,12 @@
 	<meta charset="utf-8">
 	<title>Музторг</title>
 	<link rel="stylesheet" type="text/css" href="../styles/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Lobster|Pacifico" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Lobster|Merriweather+Sans|Pacifico" rel="stylesheet">
 </head>
 <body>
 	<header>
-		<div ><a href="../index.html" id="logo"></a></div>
-		<div id="shop_name" style="font-family: 'Lobster', cursive;">МУЗТОРГ</div>
+		<a href="../index.html" id="logo"></a>
+		<a href="../index.html" id="shop_name" style="font-family: 'Lobster', cursive;">МУЗТОРГ</a>
 		<div id="navigation">
 			<a href="#">Главная</a>
 			<a href="#">Корзина</a>
