flex header add

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 	<link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Lobster|Merriweather+Sans|Pacifico" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<div ><a href="index.html" id="logo"></a></div>
-		<div id="shop_name" style="font-family: 'Lobster', cursive;">МУЗТОРГ</div>
-		<div id="navigation">
-			<a href="#">Главная</a>
-			<a href="#">Корзина</a>
-			<a href="#">Наши магазины</a>
+	<header class="flex-container-head">
+		<div class="flex-block-head"><a href="../index.html" id="logo"></a>
+		<a href="../index.html" id="shop_name" style="font-family: 'Lobster', cursive;">МУЗТОРГ</a></div>
+		<div class="flex-block-head" id="navigation">
+			    <div id="nav_a"><a href="#" >Главная</a>
+			    <a href="#" >Корзина</a>
+			    <a href="#" >Наши магазины</a></div>
 		</div>
 	</header>
 	<nav id="catalog">
